# pytest-servers

./: .cruft.json  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  README.rst  codecov.yml  noxfile.py  pyproject.toml  renovate.json  setup.cfg
.github/workflows/: release.yml  tests.yml  update-template.yaml
src/pytest_servers/: __init__.py  azure.py  exceptions.py  factory.py  fixtures.py  gcs.py  local.py  s3.py  utils.py
tests/: __init__.py  conftest.py  test_factory.py  test_fixtures.py  test_memory.py  test_pytest_servers.py  test_s3_endpoint_url.py  test_utils.py
