[metadata]
description = pytest servers
name = pytest-servers
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/pytest-servers
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    pytest==7.1.2
    dvc-objects>=0.0.13
    funcy>=1.14
    requests==2.28.0
    universal-pathlib==0.0.19

[options.entry_points]
pytest11 =
    pytest-servers = pytest_servers.fixtures


[options.extras_require]
tests =
    pytest==7.1.2
    pytest-cov==3.0.0
    pytest-sugar==0.9.4
    pylint==2.14.3
    mypy==0.961
    types-requests==2.27.30

s3 =
    moto[server]==3.1.14
    s3fs[boto3]>=2022.02.0
    aiobotocore[boto3]>2

dev =
    %(tests)s

all =
    %(s3)s


[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
