[metadata]
description = pytest servers
name = pytest-servers
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/pytest-servers
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    pytest>=6.2
    requests
    fsspec
    universal-pathlib==0.0.21
    filelock>=3.3.2

[options.entry_points]
pytest11 =
    pytest-servers = pytest_servers.fixtures

[options.extras_require]
tests =
    # see https://github.com/nedbat/coveragepy/issues/1341#issuecomment-1228942657
    coverage-enable-subprocess
    coverage[toml]>6
    pytest-sugar==0.9.5
    pytest-xdist==2.5.0
    pylint==2.15.3
    mypy==0.961
    types-requests
s3 =
    moto[server]>=4.0.8
    s3fs[boto3]>=2022.02.0
azure =
    adlfs>=2022.02.22
    %(docker)s
gcs =
    gcsfs>=2022.02.22
    %(docker)s
docker =
    docker==6.0.0
dev =
    %(all)s
    %(tests)s
all =
    %(s3)s
    %(azure)s
    %(gcs)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/

per-file-ignores =
    # many fixtures will be unused imports
    src/pytest_servers/fixtures.py:F401,
    # fixtures which use other fixtures will trigger this
    src/pytest_servers/fixtures.py:F811

max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
